--- a/.env.example
+++ b/.env.example
@@ -14,10 +14,12 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+SESSION_DRIVER=cookie
+SANCTUM_STATEFUL_DOMAINS=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
